mesa: name driver library appropriately
Fixes #271.

--- a/recipes/raw/falkon/init.config
+++ b/recipes/raw/falkon/init.config
@@ -70,7 +70,9 @@
 			<service name="File_system" label="downloads"> <parent label="downloads"/> </service>
 			<service name="Report" label="clipboard"> <parent label="clipboard"/> </service>
 			<service name="ROM" label="clipboard"> <parent label="clipboard"/> </service>
-			<service name="ROM" label="egl_drv.lib.so"> <parent label="egl_swrast.lib.so" /> </service>
+			<service name="ROM" label="mesa_gpu_drv.lib.so">
+				<parent label="mesa_gpu-softpipe.lib.so" />
+			</service>
 			<service name="Terminal"> <child name="jitter_sponge"/> </service>
 			<any-service> <parent /> </any-service>
 		</route>
